# ChessBoard

./: Readme.md  chess_board.ipynb  pyproject.toml
