[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["anas <civil.anas1000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
jupyterlab = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
